[package]
name = "cachecannon"
version = "0.0.12-alpha.0"
authors = ["Brian Martin <brayniac@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cachecannon/cachecannon"
description = "High-performance cache protocol benchmark tool"

[dependencies]
# I/O event loop
ringline = { git = "https://github.com/ringline-rs/ringline.git", rev = "bd08001", features = ["timestamps"] }
ringline-momento = { git = "https://github.com/ringline-rs/ringline.git", rev = "bd08001", features = ["timestamps"] }

# Consistent hashing
ketama = "0.0.1"

# Channels
crossbeam-channel = "0.5"

# Protocol implementations
resp-proto = { version = "0.0.1", features = ["resp3"] }

# Client crates
ringline-redis = { git = "https://github.com/ringline-rs/ringline.git", rev = "bd08001", features = ["timestamps"] }
ringline-memcache = { git = "https://github.com/ringline-rs/ringline.git", rev = "bd08001", features = ["timestamps"] }
ringline-ping = { git = "https://github.com/ringline-rs/ringline.git", rev = "bd08001", features = ["timestamps"] }

# Metrics
histogram = "1.0.0"
metriken = "0.8"
metriken-exposition = { version = "0.14", features = ["parquet"] }
metriken-query = { version = "0.6", features = ["http"] }

# Configuration
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Time/Date
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# TLS
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
webpki-roots = "0.26"

# Rate limiting
ratelimit = { git = "https://github.com/iopsystems/ratelimit", version = "1.0.1-alpha.0" }

# Utilities
bytes = "1.11.1"
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
thiserror = "2"
itoa = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# RNG for workload generation
rand = "0.9"
rand_xoshiro = "0.7"

# Signal handling
ctrlc = { version = "3", features = ["termination"] }

# Async runtime for admin server
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }

# Viewer dependencies
arrow = "56"
parquet = "56"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "decompression-gzip"] }
tower-livereload = "0.9"
include_dir = "0.7"
open = "5"
tracing-appender = "0.2"
http = "1"

# Jemalloc allocator
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }

[features]
default = []

[[bin]]
name = "cachecannon"
path = "src/main.rs"

[[bin]]
name = "valkey-lab"
path = "src/valkey_lab.rs"

[package.metadata.deb]
name = "cachecannon"
maintainer = "Brian Martin <brayniac@gmail.com>"
section = "net"
priority = "optional"
assets = [
    ["target/release/cachecannon", "usr/bin/", "755"],
    ["config/example.toml", "etc/cachecannon/benchmark.toml.example", "644"],
]

[package.metadata.deb.variants.valkey-lab]
name = "valkey-lab"
assets = [
    ["target/release/valkey-lab", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
name = "cachecannon"
assets = [
    { source = "target/release/cachecannon", dest = "/usr/bin/cachecannon", mode = "0755" },
    { source = "config/example.toml", dest = "/etc/cachecannon/benchmark.toml.example", mode = "0644", config = true },
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true
